# golem-example-lib-db

./: Cargo.toml  README.md  golem.yaml
common-rust/: golem.yaml
components-rust/libdb-backend/: Cargo.toml  golem.yaml  index.html
components-rust/libdb-backend/.wit/wit/: main.wit
components-rust/libdb-backend/src/: catalog.rs  frontend.rs  lib.rs  library.rs  library_analysis.rs  log.rs  topic.rs  topic_discovery.rs
