[workspace]
resolver = "2"
members = ["components-rust/*", "common-rust/*"]

[profile.release]
opt-level = "s"
lto = true

[workspace.dependencies]
golem-rust = { version = "1.10.1", features = ["export_golem_agentic", "golem_ai"] } # Enable feature "golem_ai" to work with various AI providers
golem-wasi-http = { version = "0.1.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
